--- a/public/assets/css/perfectr.css
+++ b/public/assets/css/perfectr.css
@@ -19,12 +19,12 @@ LAYOUT STYLES
 #preloader span{
   display: inline-block;
   position: absolute;
-  width:548px;
-  height:548px;
-  top:20%;
-  left: 30%;
+  width:48px;
+  height:48px;
+  top:50%;
+  left: 50%;
   margin:-24px 0 0 -24px;
-  background-image: url(../images/giphy.gif);
+  background-image: url(../images/preloader.gif);
   -webkit-transition:-webkit-transform .6s ease-out, opacity .3s ease-out;
   transition:transform .6s ease-out, opacity .3s ease-out;
 }
